<resources>
    <string name="app_name">CalculatorRecorder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="sub">Sub</string>
    <string name="mul">Mul</string>
    <string name="div">Div</string>
    <string name="main">Main</string>
    <string name="value1">Value1</string>
    <string name="value2">Value2</string>
    <string name="save">Save</string>
</resources>
