<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etCalculatorValue1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value1"
        android:inputType="number"
        android:maxLength="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCalculatorAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/btCalculatorSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub" />

        <Button
            android:id="@+id/btCalculatorMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mul" />

        <Button
            android:id="@+id/btCalculatorDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div" />
    </LinearLayout>

    <EditText
        android:id="@+id/etCalculatorValue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value2"
        android:inputType="number"
        android:maxLength="5" />

    <TextView
        android:id="@+id/tvCalculatorResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btCalculatorSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>